--- a/dev/sass/_view.venue.scss
+++ b/dev/sass/_view.venue.scss
@@ -94,6 +94,8 @@
 		bottom: auto;
 
 		.lunch-icon {
+			padding: 0;
+			border: none;
 			float: left;
 		}
 	}
@@ -115,6 +117,8 @@
 			color: #444;
 		}
 		.lunch-icon {
+			color: #444;
+			border: none;
 			float: left;
 		}
 	}
