--- a/templates/page.app.angular.temp.html
+++ b/templates/page.app.angular.temp.html
@@ -20,7 +20,7 @@
 
 		<!-- angular and socket.io -->
 		<script type="text/javascript" src="../static/js/libraries.js"></script>
-		<script type="text/javascript" src="../static/js/app.js"></script>
+		<script type="text/javascript" src="../dev/js/front.js"></script>
 	</head>
 
 	<body ng-app="lunchpadApp" class="lunch-page-app">
