--- a/templates/view.venuedetail.temp.html
+++ b/templates/view.venuedetail.temp.html
@@ -85,15 +85,14 @@
 				<div class="lunch-commentator">
 					<img width="40" height="80" src="../static/img/mk.png" alt="" class="lunch-user-image">
 				</div>
-				<p class="lunch-comment-content"><span class="lunch-comment-arrow">&nbsp;</span>Hey, was geht? Wann gehma?</p>
+				<p class="lunch-comment-content">Hey, was geht? Wann gehma?</p>
 			</div>
 
 			<div class="lunch-comment">
 				<div class="lunch-commentator">
 					<img width="40" height="80" src="../static/img/mrz.png" alt="" class="lunch-user-image">
 				</div>
-				<p class="lunch-comment-content"><span class="lunch-comment-arrow">&nbsp;</span>
-					Wir gehen ins Arts'n Boards. Da gibts Burger. Kommt lieber mit uns mit!</p>
+				<p class="lunch-comment-content">Wir gehen ins Arts'n Boards. Da gibts Burger. Kommt lieber mit uns mit!</p>
 			</div>
 
 
