--- a/dev/sass/_view.venue.scss
+++ b/dev/sass/_view.venue.scss
@@ -22,13 +22,13 @@
 		overflow: hidden;
 		margin: {
 			top: 10px;
-			left: -20px;
+			left: -15px;
 		}
 		padding: 10px 15px;
 		
 
 		// Skin
-		color: #ddd;
+		color: #aaa;
 		cursor: pointer;
 		background: {
 			color: #fff;
@@ -36,7 +36,7 @@
 
 
 		// Effects
-		@include border-radius( 25px );
+		//@include border-radius( 25px );
 		
 		// Children
 		.lunch-icon {
@@ -78,7 +78,7 @@
 		}
 	}
 
-	.lunch-fn-attend,
+
 	.lunch-fn-quit {
 		
 		@include transform(none);
@@ -99,25 +99,58 @@
 			float: left;
 		}
 	}
-
-	.lunch-fn-menu {
-		// Inherit
-		@extend .lunch-venue-btn;
+	
+	.lunch-fn-menu, 
+	.lunch-fn-invite {
 
 		// Box
-		float: left;
-		padding: 0;
-
-		font: {
-			style: normal;
+		display: inline-block;
+		margin: 0;
+		padding: 7px 14px;
+		border: {
+			width: 2px;
+			color: #aaa;
+			style: solid;
 		}
+		vertical-align: top;
 
+		// Position
+		position: relative;
+		left: auto;
+		bottom: auto;
+		right: auto;
+		top: auto;
+
+
+		// Skin
+		color: #aaa;
+		background: {
+			color: transparent;
+		}
+		
 		// Children 
+
 		.lunch-label {
-			color: #444;
+			
+			padding: {
+				left: 5px;
+				right: 5px;
+			}
+			font: {
+				family: Georgia, serif;
+				style: italic;
+				size: 14px;
+			}
+			color: #aaa;
+
 		}
 		.lunch-icon {
-			color: #444;
+
+			font: {
+				style: normal;
+				size: 18px;
+			}
+			color: #aaa;
 			border: none;
 			float: left;
 		}
@@ -127,9 +160,10 @@
 	.lunch-venue-header {
 		
 		// Box
-		overflow: hidden;
+		display: table;
+		width: 100%;
 		max-width: 600px;
-		padding: {
+		margin: {
 			top: 0;
 			left: 60px;
 			right: 60px;
@@ -175,18 +209,18 @@
 
 		// Box
 		max-width: 600px;
-		padding: {
-			top: 35px;
-			right: 60px;
-			bottom: 40px;
-			left: 60px;
-		}
+		padding: 0;
 		margin: {
-			top: 0;
+			top: 20px;
 			left: 0;
 			right: 0;
-			bottom: 0;
+			bottom: 20px;
 		}
+
+
+		
+		// Position
+		position: relative;
 
 
 		// Skin
