--- a/dev/sass/_ui.inputs.scss
+++ b/dev/sass/_ui.inputs.scss
@@ -111,7 +111,7 @@ $lunch-color-filter-active: #555;
 
 
 	// Effects
-	@include border-radius( 25px );
+	//@include border-radius( 25px );
 
 
 	// States
