fixed syntax errors

--- a/templates/page.app.angular.html
+++ b/templates/page.app.angular.html
@@ -9,7 +9,7 @@
 		<title>19:13 Lunchpad</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
-		
+
 		<!-- Style -->
 		<link rel="stylesheet" href="../static/css/app.css">
 		<link rel="icon" href="../static/img/favicon.ico" type="image/x-icon"/>
@@ -23,8 +23,8 @@
 		<script type="text/javascript" src="../static/js/app.js"></script>
 	</head>
 
-	<body ng-app="lunchpadApp" class="lunch-page-app">
-		
+	<body ng-app="lunchpad" class="lunch-page-app">
+
 
 
 		<!-- Header -->
@@ -84,7 +84,7 @@
 		<!-- Error -->
 
 		<div lp-erroralert></div>
-		
+
 
 
 
