--- a/dev/sass/_page.venue.scss
+++ b/dev/sass/_page.venue.scss
@@ -1,10 +1,10 @@
-/*
+/**
  * Styles for venue view
  * @author Joachim Fröstl <jf@19h13.com>
  */
 
- .lunch-view-venuedetail {
- 	background: {
+.lunch-view-venuedetail {
+  background: {
  		color: #0f0;
- 	}
- }
+  }
+}
