--- a/templates/page.app.angular.html
+++ b/templates/page.app.angular.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+0<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -19,6 +19,7 @@
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
 		<!-- angular and socket.io -->
+		<script type="text/javascript" src="./socket.io/socket.io.js"></script>
 		<script type="text/javascript" src="../static/js/libraries.js"></script>
 		<script type="text/javascript" src="../static/js/app.js"></script>
 	</head>
