login bugfixes and version drama

--- a/templates/page.login.html
+++ b/templates/page.login.html
@@ -22,7 +22,7 @@
 			<img src="../static/img/logo-lp.png" alt="">
 		</a>
 	</header>
-	<form action="/login" method="post" class="lunch-login-form">
+	<form action="/auth/login" method="post" class="lunch-login-form">
 		
 		<label for="username" class="lunch-inp-label">Username</label>
 		<input type="text" name="username" class="lunch-inp-username">
